--- a/lectures/09-qr/qr.ipynb
+++ b/lectures/09-qr/qr.ipynb
@@ -2,18 +2,86 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Julia Version 1.6.2\n",
+      "Commit 1b93d53fc4 (2021-07-14 15:36 UTC)\n",
+      "Platform Info:\n",
+      "  OS: macOS (x86_64-apple-darwin18.7.0)\n",
+      "  CPU: Intel(R) Core(TM) i5-8279U CPU @ 2.40GHz\n",
+      "  WORD_SIZE: 64\n",
+      "  LIBM: libopenlibm\n",
+      "  LLVM: libLLVM-11.0.1 (ORCJIT, skylake)\n"
+     ]
+    }
+   ],
    "source": [
     "versioninfo()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m environment at `~/Dropbox/class/M1399.000200/2021/M1399_000200-2021fall/Project.toml`\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m\u001b[1m      Status\u001b[22m\u001b[39m `~/Dropbox/class/M1399.000200/2021/M1399_000200-2021fall/Project.toml`\n",
+      " \u001b[90m [7d9fca2a] \u001b[39mArpack v0.5.3\n",
+      " \u001b[90m [6e4b80f9] \u001b[39mBenchmarkTools v1.1.4\n",
+      " \u001b[90m [1e616198] \u001b[39mCOSMO v0.8.1\n",
+      " \u001b[90m [f65535da] \u001b[39mConvex v0.14.13\n",
+      " \u001b[90m [a93c6f00] \u001b[39mDataFrames v1.2.2\n",
+      " \u001b[90m [31a5f54b] \u001b[39mDebugger v0.6.8\n",
+      " \u001b[90m [31c24e10] \u001b[39mDistributions v0.24.18\n",
+      " \u001b[90m [e2685f51] \u001b[39mECOS v0.12.3\n",
+      " \u001b[90m [f6369f11] \u001b[39mForwardDiff v0.10.19\n",
+      " \u001b[90m [28b8d3ca] \u001b[39mGR v0.58.1\n",
+      " \u001b[90m [c91e804a] \u001b[39mGadfly v1.3.3\n",
+      " \u001b[90m [bd48cda9] \u001b[39mGraphRecipes v0.5.7\n",
+      " \u001b[90m [82e4d734] \u001b[39mImageIO v0.5.8\n",
+      " \u001b[90m [6218d12a] \u001b[39mImageMagick v1.2.1\n",
+      " \u001b[90m [916415d5] \u001b[39mImages v0.24.1\n",
+      " \u001b[90m [b6b21f68] \u001b[39mIpopt v0.7.0\n",
+      " \u001b[90m [42fd0dbc] \u001b[39mIterativeSolvers v0.9.1\n",
+      " \u001b[90m [4076af6c] \u001b[39mJuMP v0.21.9\n",
+      " \u001b[90m [b51810bb] \u001b[39mMatrixDepot v1.0.4\n",
+      " \u001b[90m [1ec41992] \u001b[39mMosekTools v0.9.4\n",
+      " \u001b[90m [76087f3c] \u001b[39mNLopt v0.6.3\n",
+      " \u001b[90m [47be7bcc] \u001b[39mORCA v0.5.0\n",
+      " \u001b[90m [a03496cd] \u001b[39mPlotlyBase v0.4.3\n",
+      " \u001b[90m [f0f68f2c] \u001b[39mPlotlyJS v0.15.0\n",
+      " \u001b[90m [91a5bcdd] \u001b[39mPlots v1.21.2\n",
+      " \u001b[90m [438e738f] \u001b[39mPyCall v1.92.3\n",
+      " \u001b[90m [d330b81b] \u001b[39mPyPlot v2.9.0\n",
+      " \u001b[90m [dca85d43] \u001b[39mQuartzImageIO v0.7.3\n",
+      " \u001b[90m [6f49c342] \u001b[39mRCall v0.13.12\n",
+      " \u001b[90m [ce6b1742] \u001b[39mRDatasets v0.7.5\n",
+      " \u001b[90m [c946c3f1] \u001b[39mSCS v0.7.1\n",
+      " \u001b[90m [276daf66] \u001b[39mSpecialFunctions v1.6.1\n",
+      " \u001b[90m [2913bbd2] \u001b[39mStatsBase v0.33.10\n",
+      " \u001b[90m [b8865327] \u001b[39mUnicodePlots v2.0.1\n",
+      " \u001b[90m [0f1e0344] \u001b[39mWebIO v0.8.15\n",
+      " \u001b[90m [8f399da3] \u001b[39mLibdl\n",
+      " \u001b[90m [2f01184e] \u001b[39mSparseArrays\n",
+      " \u001b[90m [10745b16] \u001b[39mStatistics\n"
+     ]
+    }
+   ],
    "source": [
     "using Pkg\n",
     "Pkg.activate(\"../..\")\n",
@@ -36,9 +104,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Vector{Float64}:\n",
+       " 0.3795466676698624\n",
+       " 0.6508866456093487\n",
+       " 0.39225041956535506"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "using Random\n",
     "\n",
@@ -221,9 +303,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cgs (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "using LinearAlgebra\n",
     "function cgs(X::Matrix{T}) where T<:AbstractFloat\n",
@@ -252,9 +345,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4×3 Matrix{Float32}:\n",
+       " 1.0         1.0         1.0\n",
+       " 1.19209f-7  0.0         0.0\n",
+       " 0.0         1.19209f-7  0.0\n",
+       " 0.0         0.0         1.19209f-7"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "e = eps(Float32)\n",
     "A = [1f0 1f0 1f0; e 0 0; 0 e 0; 0 0 e]"
@@ -262,9 +370,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4×3 Matrix{Float32}:\n",
+       " 1.0          0.0        0.0\n",
+       " 1.19209f-7  -0.707107  -0.707107\n",
+       " 0.0          0.707107   0.0\n",
+       " 0.0          0.0        0.707107"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Q, R = cgs(A)\n",
     "Q"
@@ -272,9 +395,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Matrix{Float32}:\n",
+       "  1.0         -8.42937f-8  -8.42937f-8\n",
+       " -8.42937f-8   1.0          0.5\n",
+       " -8.42937f-8   0.5          1.0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "transpose(Q)*Q"
    ]
@@ -307,9 +444,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mgs! (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "function mgs!(X::Matrix{T}) where T<:AbstractFloat\n",
     "    n, p = size(X)\n",
@@ -335,9 +483,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4×3 Matrix{Float32}:\n",
+       " 1.0          0.0        0.0\n",
+       " 1.19209f-7  -0.707107  -0.408248\n",
+       " 0.0          0.707107  -0.408248\n",
+       " 0.0          0.0        0.816497"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Q, R = mgs!(copy(A))\n",
     "Q"
@@ -345,9 +508,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Matrix{Float32}:\n",
+       "  1.0         -8.42937f-8  -4.8667f-8\n",
+       " -8.42937f-8   1.0          3.14007f-8\n",
+       " -4.8667f-8    3.14007f-8   1.0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "transpose(Q)*Q"
    ]
@@ -361,18 +538,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2×2 Matrix{Float32}:\n",
+       " 0.7  0.707107\n",
+       " 0.7  0.707107"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "B = [0.7f0 0.7071068f0; 0.7000001f0 0.7071068f0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2×2 Matrix{Float32}:\n",
+       " 0.707107  1.0\n",
+       " 0.707107  0.0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Q, R = mgs!(copy(B))\n",
     "Q"
@@ -380,9 +583,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2×2 Matrix{Float32}:\n",
+       " 1.0       0.707107\n",
+       " 0.707107  1.0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "transpose(Q)*Q"
    ]
@@ -588,27 +804,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([0.12623784496408763 -1.1278278196026448 -0.8826696457022515; -2.3468794813834966 1.1478628422667982 1.7138424693341203; … ; -0.23920888512829233 -0.23706547458394342 1.0818212935057896; -0.5784508270929073 -0.6809935026697 -0.17040614729185025], [-1.794259674143309, 1.0913793110025305, 0.4266277597108536, -0.6244337204329091, 0.03204861737738283])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X, y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Vector{Float64}:\n",
+       " 0.3795466676698624\n",
+       " 0.6508866456093487\n",
+       " 0.39225041956535506"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X \\ y # least squares solution by QR"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Vector{Float64}:\n",
+       " 0.37954666766986195\n",
+       " 0.6508866456093481\n",
+       " 0.3922504195653549"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# same as\n",
     "qr(X) \\ y"
@@ -616,18 +871,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Vector{Float64}:\n",
+       " 0.37954666766986256\n",
+       " 0.6508866456093485\n",
+       " 0.3922504195653555"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cholesky(X'X) \\ (X'y) # least squares solution by Cholesky"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "QRPivoted{Float64, Matrix{Float64}}\n",
+       "Q factor:\n",
+       "5×5 LinearAlgebra.QRPackedQ{Float64, Matrix{Float64}}:\n",
+       " -0.0407665  -0.692007    0.318693   0.185526  -0.619257\n",
+       "  0.757887   -0.0465712  -0.260086  -0.522259  -0.288166\n",
+       " -0.618938   -0.233814   -0.404293  -0.624592  -0.0931611\n",
+       "  0.0772486  -0.235405   -0.808135   0.53435    0.00216687\n",
+       "  0.186801   -0.639431    0.119392  -0.131075   0.724429\n",
+       "R factor:\n",
+       "3×3 Matrix{Float64}:\n",
+       " -3.09661  1.60888   1.84089\n",
+       "  0.0      1.53501   0.556903\n",
+       "  0.0      0.0      -1.32492\n",
+       "permutation:\n",
+       "3-element Vector{Int64}:\n",
+       " 1\n",
+       " 2\n",
+       " 3"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# QR factorization with column pivoting\n",
     "xqr = qr(X, Val(true))"
@@ -635,18 +932,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Vector{Float64}:\n",
+       " 0.3795466676698624\n",
+       " 0.6508866456093487\n",
+       " 0.39225041956535506"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "xqr \\ y # least squares solution"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.071020016095422e-15"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# thin Q matrix multiplication (a sequence of Householder transforms)\n",
     "norm(xqr.Q * xqr.R - X[:, xqr.p]) # recovers X (with columns permuted)"
@@ -771,15 +1093,15 @@
    "lastKernelId": null
   },
   "kernelspec": {
-   "display_name": "Julia 1.4.0",
+   "display_name": "Julia 1.6.2",
    "language": "julia",
-   "name": "julia-1.4"
+   "name": "julia-1.6"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.4.0"
+   "version": "1.6.2"
   },
   "toc": {
    "colors": {
