--- a/hw/hw3/hw03.ipynb
+++ b/hw/hw3/hw03.ipynb
@@ -17,14 +17,14 @@
    "source": [
     "## Q1. Eigenvalue computation\n",
     "\n",
-    "1. Let $\\mathbf{A}$ be a symmetric $n\\times n$ matrix. Show that a real number $z \\in \\mathbb{R}$ is a Rayleigh quotient if and only if $z$ is a diagonal entry of $\\mathbf{Q}^T\\mathbf{A}\\mathbf{Q}$, where $\\mathbf{Q} \\in \\mathbb{R}^{n\\times n}$ is an orthogonal matrix."
+    "1) Let $\\mathbf{A}$ be a symmetric $n\\times n$ matrix. Show that a real number $z \\in \\mathbb{R}$ is a Rayleigh quotient if and only if $z$ is a diagonal entry of $\\mathbf{Q}^T\\mathbf{A}\\mathbf{Q}$, where $\\mathbf{Q} \\in \\mathbb{R}^{n\\times n}$ is an orthogonal matrix."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Recall that the shifted inverse iteration depends on solving a linear system of the form $(\\mathbf{A} - \\sigma\\mathbf{I})\\mathbf{x} = \\mathbf{v}$ where $\\sigma$ is close to an eigenvalue of a symmetric matrix $\\mathbf{A}$. That is, the linear system is likely ill-conditioned. How can then the algorithm work?\n",
+    "2) Recall that the shifted inverse iteration depends on solving a linear system of the form $(\\mathbf{A} - \\sigma\\mathbf{I})\\mathbf{x} = \\mathbf{v}$ where $\\sigma$ is close to an eigenvalue of a symmetric matrix $\\mathbf{A}$. That is, the linear system is likely ill-conditioned. How can then the algorithm work?\n",
     "\\   \n",
     "Suppose without loss of generality that $\\mathbf{A}$ has an eigenvalue very small in absolute value. Take shift $\\sigma=0$. Suppose $\\mathbf{v}$ is a vector with components in the directions of all the eigenvectors $\\mathbf{u}_1, \\dotsc, \\mathbf{u}_n$ of $\\mathbf{A}$, associated with eigenvalues $|\\lambda_1| \\ll |\\lambda_2| \\le \\dotsc \\le |\\lambda_n|$. Also suppose that linear system $\\mathbf{A}\\mathbf{x} = \\mathbf{v}$ is solved backward stably, yielding a computed solution $\\tilde{\\mathbf{x}}$.\n",
     "Show that although $\\tilde{\\mathbf{x}}$ may be far from $\\mathbf{x} = \\mathbf{A}^{-1}\\mathbf{v}$, $\\tilde{\\mathbf{x}}/\\Vert \\tilde{\\mathbf{x}} \\Vert$ will not be far from $\\mathbf{x} / \\Vert \\mathbf{x} \\Vert$.\n",
@@ -53,13 +53,18 @@
     "```\n",
     "where `label` is a label corresponding to the digit represented by the image (0, 1, ..., 9), and `pix(r, c)` is the pixel intensity at row `r`, column `c` (an integer between 0 and 255 (inclusive)).\n",
     "\n",
-    "The $i$-th image in a dataset is considered a vector $\\mathbf{x}_i \\in \\mathbb{R}^p$, $p = 28\\times 28 = 784$.\n",
-    "\n",
+    "The $i$-th image in a dataset is considered a vector $\\mathbf{x}_i \\in \\mathbb{R}^p$, $p = 28\\times 28 = 784$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "1) A widely used approach towards digit recognition is principal component analysis. Compute the sample covariance matrix\n",
     "$$\n",
     "    \\hat{\\Sigma} = \\frac{1}{n}\\sum_{i=1}^n\\mathbf{x}_i\\mathbf{x}_i^T.\n",
     "$$\n",
-    "    \\\n",
+    "\\\n",
     "after standardization.\n",
     "  Let $V \\in \\mathbb{R}^{d\\times r}$ be the matrix whose columns are given by the eigenvectors of $\\Sigma$  associated with the $r = 10$ largest eigenvalues.\n",
     "\\\n",
@@ -108,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Compute summary statistics:\n",
+    "4) Compute summary statistics:\n",
     "    - number of pages\n",
     "    - number of edges\n",
     "    - number of dangling nodes (pages with no out links)\n",
@@ -123,11 +128,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Set $p=0.8$ and solve the PageRank problem with the above $\\mathbf{A}$ using\n",
+    "5) Set $p=0.8$ and solve the PageRank problem with the above $\\mathbf{A}$ using\n",
     "    - An iterative linear system solver such as [GMRES](https://iterativesolvers.julialinearalgebra.org/dev/linear_systems/gmres/).\n",
     "    - An iterative EVD solver such as Arnoldi method. (Check out the `Lanczos/Arnoldi iterative method for top eigen-pairs` section in the lecture notes on EVD.)\n",
-    "\n",
-    "  For iterative methods, use the `IterativeSolvers.jl` and `Arpack.jl` packages. Make sure to utilize the special structure of $\\mathbf{P}$ to speed up the matrix-vector multiplication. (Hint: `LinearMaps.jl`)"
+    "\\\n",
+    "For iterative methods, use the `IterativeSolvers.jl` and `Arpack.jl` packages. Make sure to utilize the special structure of $\\mathbf{P}$ to speed up the matrix-vector multiplication. (Hint: `LinearMaps.jl`)"
    ]
   },
   {
@@ -196,7 +201,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "7. Show that the condition number of problem $f: \\mathbf{A} \\mapsto \\mathbf{A}^{-1}\\mathbf{b}$, where $\\mathbf{A}$ is an invertible matrix, is\n",
+    "7) Show that the condition number of problem $f: \\mathbf{A} \\mapsto \\mathbf{A}^{-1}\\mathbf{b}$, where $\\mathbf{A}$ is an invertible matrix, is\n",
     "$$\n",
     "\\kappa = \\Vert\\mathbf{A}\\Vert\\Vert\\mathbf{A}^{-1}\\Vert.\n",
     "$$\n",
@@ -256,14 +261,14 @@
    "source": [
     "## Q6. Lasso and Danzig\n",
     "\n",
-    "1. Formulate the Danzig selector problem as an LP."
+    "1) Formulate the Danzig selector problem as an LP."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Characterize $t_{\\max}$, for which if $t \\ge t_{\\max}$, the solution to the Danzig selector problem does not vary. "
+    "2) Characterize $t_{\\max}$, for which if $t \\ge t_{\\max}$, the solution to the Danzig selector problem does not vary. "
    ]
   },
   {
