Q5 Gurobi API -> R linprog

--- a/hw/hw3/hw03.ipynb
+++ b/hw/hw3/hw03.ipynb
@@ -245,7 +245,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2) Find the solution to the above LP using Gurobi APIs directly."
+    "2) Find the solution to the above LP using the `linprog` R package (Your code should run on Julia). "
    ]
   },
   {
