fix link to polynomial fitting

--- a/lectures/19-sdp/sdp.ipynb
+++ b/lectures/19-sdp/sdp.ipynb
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
        " -0.146157  -0.071196    0.570529   -0.318838   1.0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,17 +228,17 @@
     "using Random, LinearAlgebra, Convex\n",
     "\n",
     "Random.seed!(123) # seed\n",
-    "n=5\n",
-    "A=randn(n,n)\n",
-    "ludecomp=lu(A)\n",
-    "P=ludecomp.L*transpose(ludecomp.L)\n",
-    "Drt=Diagonal(1 ./sqrt.(diag(P)))\n",
+    "n = 5\n",
+    "A = randn(n,n)\n",
+    "ludecomp = lu(A)\n",
+    "P = ludecomp.L * transpose(ludecomp.L)\n",
+    "Drt = Diagonal(1 ./sqrt.(diag(P)))\n",
     "C = Drt * P * Drt  # correlation matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
        " 2.1199308503584726"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        " -0.259963   -0.164121    1.33644   -1.89047    0.279969"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
        "  3.773240675591988"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,27 +314,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 22.289525 seconds (51.32 M allocations: 2.944 GiB, 6.21% gc time)\n"
+      "  5.573735 seconds (9.49 M allocations: 557.345 MiB, 6.03% gc time, 9.00% compilation time)\n"
      ]
     }
    ],
    "source": [
-    "# Use Mosek solver\n",
-    "using Mosek, MosekTools\n",
-    "opt = () -> Mosek.Optimizer(LOG=0)\n",
+    "## Use Mosek solver\n",
+    "#using Mosek, MosekTools\n",
+    "#opt = () -> Mosek.Optimizer(LOG=0)\n",
     "\n",
-    "## Use SCS solver\n",
-    "#using SCS\n",
-    "#opt = () -> SCS.Optimizer(verbose=0)  \n",
+    "# Use SCS solver\n",
+    "using SCS\n",
+    "opt = () -> SCS.Optimizer(verbose=0)  \n",
     "\n",
-    "## Use COSMO solver\n",
+    "# Use COSMO solver\n",
     "#using COSMO\n",
     "#opt = () -> COSMO.Optimizer(max_iter=10000, verbose=false) \n",
     "\n",
@@ -347,27 +347,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "5×5 Matrix{Float64}:\n",
-       "  1.0         0.034539   0.159093  -0.0713063  -0.0522196\n",
-       "  0.034539    1.0       -0.675227   0.236175   -0.306471\n",
-       "  0.159093   -0.675227   1.0       -0.866109    0.878962\n",
-       " -0.0713063   0.236175  -0.866109   1.0        -0.990035\n",
-       " -0.0522196  -0.306471   0.878962  -0.990035    1.0"
+       "  1.0         0.0345383   0.159092  -0.0713076  -0.0522203\n",
+       "  0.0345383   1.0        -0.675225   0.236181   -0.306468\n",
+       "  0.159091   -0.675225    1.0       -0.866113    0.878962\n",
+       " -0.0713074   0.236181   -0.866113   1.0        -0.990036\n",
+       " -0.0522201  -0.306468    0.878962  -0.990035    1.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "X.value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.065405907377783"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "norm(vec(A - X.value))"
    ]
   },
   {
@@ -381,21 +401,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "5-element Vector{Float64}:\n",
-       " -3.8981027291237895e-9\n",
-       "  1.8750345738521667e-8\n",
-       "  0.9072291325547281\n",
-       "  1.02481166332433\n",
-       "  3.0679591892686995"
+       " 1.3701702901425441e-7\n",
+       " 3.139299502971949e-7\n",
+       " 0.9072266457362997\n",
+       " 1.0248113484678312\n",
+       " 3.067961561662945"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +446,7 @@
     "$$\n",
     "where $\\mathbf{A}_i \\in \\mathbb{S}^m$, $i = 0, \\ldots, n$. Let $\\lambda_1(\\mathbf{x}) \\ge \\lambda_2(\\mathbf{x}) \\ge \\cdots \\ge \\lambda_m(\\mathbf{x})$ be the ordered eigenvalues of $\\mathbf{A}(\\mathbf{x})$.\n",
     "\n",
-    "* Minimizing the maximal eigenvalue is equivalent to the SDP\n",
+    "* Minimizing the largest eigenvalue is equivalent to the SDP\n",
     "\\begin{eqnarray*}\n",
     "\t&\\text{minimize}& t \\\\\n",
     "\t&\\text{subject to}& \\mathbf{A}(\\mathbf{x}) \\preceq t \\mathbf{I}\n",
@@ -436,21 +456,21 @@
     "    - Minimizing the sum of $k$ largest eigenvalues is an SDP too. How about minimizing the sum of all eigenvalues?\n",
     "    - *Maximizing* the minimum eigenvalue is an SDP as well.\n",
     "\n",
-    "* Minimizing the *spread* of the eigenvalues $\\lambda_1(\\mathbf{x}) - \\lambda_m(\\mathbf{x})$ is equivalent to the SDP\n",
+    "* Minimizing the *spread* of the eigenvalues $\\lambda_1(\\mathbf{x}) - \\lambda_n(\\mathbf{x})$ is equivalent to the SDP\n",
     "\\begin{eqnarray*}\n",
-    "\t&\\text{minimize}& t_1 - t_m \\\\\n",
-    "\t&\\text{subject to}& t_m \\mathbf{I} \\preceq \\mathbf{A}(\\mathbf{x}) \\preceq t_1 \\mathbf{I}\n",
+    "\t&\\text{minimize}& t_1 - t_n \\\\\n",
+    "\t&\\text{subject to}& t_n \\mathbf{I} \\preceq \\mathbf{A}(\\mathbf{x}) \\preceq t_1 \\mathbf{I}\n",
     "\\end{eqnarray*}\n",
-    "in variables $\\mathbf{x} \\in \\mathbb{R}^n$ and $t_1, t_m \\in \\mathbb{R}$.\n",
+    "in variables $\\mathbf{x} \\in \\mathbb{R}^n$ and $t_1, t_n \\in \\mathbb{R}$.\n",
     "\n",
-    "* Minimizing the spectral radius (or spectral norm) $\\rho(\\mathbf{x}) = \\max_{i=1,\\ldots,m} |\\lambda_i(\\mathbf{x})|$ is equivalent to the SDP\n",
+    "* Minimizing the spectral radius (or spectral norm) $\\rho(\\mathbf{x}) = \\max_{i=1,\\ldots,n} |\\lambda_i(\\mathbf{x})|$ is equivalent to the SDP\n",
     "\\begin{eqnarray*}\n",
     "\t&\\text{minimize}& t \\\\\n",
     "\t&\\text{subject to}& - t \\mathbf{I} \\preceq \\mathbf{A}(\\mathbf{x}) \\preceq t \\mathbf{I}\n",
     "\\end{eqnarray*}\n",
     "in variables $\\mathbf{x} \\in \\mathbb{R}^n$ and $t \\in \\mathbb{R}$.\n",
     "\n",
-    "* To minimize the condition number $\\kappa(\\mathbf{x}) = \\lambda_1(\\mathbf{x}) / \\lambda_m(\\mathbf{x})$, note $\\lambda_1(\\mathbf{x}) / \\lambda_m(\\mathbf{x}) \\le t$ if and only if there exists a $\\mu > 0$ such that $\\mu \\mathbf{I} \\preceq \\mathbf{A}(\\mathbf{x}) \\preceq \\mu t \\mathbf{I}$, or equivalently, $\\mathbf{I} \\preceq \\mu^{-1} \\mathbf{A}(\\mathbf{x}) \\preceq t \\mathbf{I}$. With change of variables $y_i = x_i / \\mu$ and $s = 1/\\mu$, we can solve the SDP\n",
+    "* To minimize the condition number $\\kappa(\\mathbf{x}) = \\lambda_1(\\mathbf{x}) / \\lambda_n(\\mathbf{x})$, note $\\lambda_1(\\mathbf{x}) / \\lambda_m(\\mathbf{x}) \\le t$ if and only if there exists a $\\mu > 0$ such that $\\mu \\mathbf{I} \\preceq \\mathbf{A}(\\mathbf{x}) \\preceq \\mu t \\mathbf{I}$, or equivalently, $\\mathbf{I} \\preceq \\mu^{-1} \\mathbf{A}(\\mathbf{x}) \\preceq t \\mathbf{I}$. With change of variables $y_i = x_i / \\mu$ and $s = 1/\\mu$, we can solve the SDP\n",
     "\\begin{eqnarray*}\n",
     "\t&\\text{minimize}& t \\\\\n",
     "\t&\\text{subject to}& \\mathbf{I} \\preceq s \\mathbf{A}_0 + y_1 \\mathbf{A}_1 + \\cdots y_n \\mathbf{A}_n \\preceq t \\mathbf{I} \\\\\n",
@@ -529,7 +549,7 @@
     "where $\\varepsilon_i$ are independent Gaussian noises with common variance $\\sigma^2$. \n",
     "It is well known that the least squares estimate $\\hat{\\boldsymbol{\\beta}}$ is unbiased and has covariance $\\sigma^2(\\sum_{i=1}^n\\mathbf{x}_i\\mathbf{x}_i ^T)^{−1}$. \n",
     "\n",
-    "  In experimental design, given total number of allowable experiments, we want to choose among a list of $m$ candidate design points $\\{\\mathbf{x}_1,\\dotsc,\\mathbf{x}_m\\}$ such that the covariance matrix is *minimized* in some sense. This *exact* design problem is a combinatorial optimization problem, which is hard to solve. Instead, weight $w_i$ is put to each design point $\\mathbf{x}_i$, and we want to find a probability vector $\\mathbf{w}\\in\\Delta_{m-1}$, and the matrix $V = \\sum_{i=1}^m (w_i\\mathbf{x}_i\\mathbf{x}_i^T)^{−1}$ is \"small\". Some popular criteria are:\n",
+    "  In experimental design, given total number of allowable experiments, we want to choose among a list of $m$ candidate design points $\\{\\mathbf{x}_1,\\dotsc,\\mathbf{x}_m\\}$ such that the covariance matrix is *minimized* in some sense. This *exact* design problem is a combinatorial optimization problem, which is hard to solve. Instead, weight $w_i$ is put to each design point $\\mathbf{x}_i$, and we want to find a probability vector $\\mathbf{w}\\in\\Delta_{m-1}$, and the matrix $V = (\\sum_{i=1}^m w_i\\mathbf{x}_i\\mathbf{x}_i^T)^{−1}$ is \"small\". Some popular criteria are:\n",
     "    - D-optimal design: minimize $\\text{det}V$.\n",
     "    - E-optimal design: minimize $\\|V\\|_2 = \\lambda_{\\max}(V)$.\n",
     "    - A-optimal design: minimize $\\frac{1}{m}\\sum_{i=1}^p\\lambda_i(V) = \\text{trace}{V}$.\n",
@@ -587,7 +607,7 @@
     "where $\\boldsymbol{\\Omega}=\\boldsymbol{\\Sigma}^{-1}$.\n",
     "    - This approach yields $\\mathbf{S} + \\kappa\\mathbf{I}$ as a solution. See\n",
     "    \n",
-    "      Warton, D.I., 2008. Penalized normal likelihood and ridge regularization of correlation and covariance matrices. Journal of the American Statistical Association, 103(481), pp.340-349. <https://doi.org/10.1198/016214508000000021>"
+    "    > Warton, D.I., 2008. Penalized normal likelihood and ridge regularization of correlation and covariance matrices. Journal of the American Statistical Association, 103(481), pp.340-349. <https://doi.org/10.1198/016214508000000021>"
    ]
   },
   {
@@ -597,42 +617,51 @@
     "## SDP example: cone of nonnegative polynomials\n",
     "\n",
     "* Consider nonnegative polynomial of degree $2n$ \n",
-    "\\begin{eqnarray*}\n",
-    "\tf(t) = \\mathbf{x}^T \\mathbf{v}(t) = x_0 + x_1 t + \\cdots x_{2n} t^{2n} \\ge 0, \\text{ for all } t.\n",
-    "\\end{eqnarray*}\n",
+    "$$\n",
+    "f(t) = \\mathbf{x}^T \\mathbf{v}(t) = x_0 + x_1 t + \\cdots x_{2n} t^{2n} \\ge 0, \\text{ for all } t.\n",
+    "$$\n",
     "The cone\n",
-    "\\begin{eqnarray*}\n",
-    "\t\\mathbf{K}^n = \\{\\mathbf{x} \\in \\mathbb{R}^{2n+1}: f(t) = \\mathbf{x}^T \\mathbf{v}(t) \\ge 0, \\text{ for all } t \\in \\mathbb{R}\\}\n",
-    "\\end{eqnarray*}\n",
+    "$$\n",
+    "\\mathbf{K}^n = \\{\\mathbf{x} \\in \\mathbb{R}^{2n+1}: f(t) = \\mathbf{x}^T \\mathbf{v}(t) \\ge 0, \\text{ for all } t \\in \\mathbb{R}\\}\n",
+    "$$\n",
     "can be characterized by LMI\n",
-    "\\begin{eqnarray*}\n",
-    "\tf(t) \\ge 0 \\text{ for all } t \\Leftrightarrow x_i = \\langle \\mathbf{X}, \\mathbf{H}_i \\rangle, i=0,\\ldots,2n, \\mathbf{X} \\in \\mathbb{S}_+^{n+1},\n",
-    "\\end{eqnarray*}\n",
-    "where $\\mathbf{H}_i \\in \\mathbb{R}^{(n+1) \\times (n+1)}$ are Hankel matrices with entries $(\\mathbf{H}_i)_{kl} = 1$ if $k+l=i$ or 0 otherwise. Here $k, l \\in \\{0, 1, \\ldots, n\\}$. \n",
+    "$$\n",
+    "f(t) \\ge 0 \\text{ for all } t \\Leftrightarrow x_i = \\langle \\mathbf{X}, \\mathbf{H}_i \\rangle, i=0,\\ldots,2n, \\mathbf{X} \\in \\mathbb{S}_+^{n+1},\n",
+    "$$\n",
+    "where $\\mathbf{H}_i \\in \\mathbb{R}^{(n+1) \\times (n+1)}$ are [Hankel matrices](https://en.wikipedia.org/wiki/Hankel_matrix) with entries $(\\mathbf{H}_i)_{kl} = 1$ if $k+l=i$ or 0 otherwise. Here $k, l \\in \\{0, 1, \\ldots, n\\}$. \n",
     "\n",
     "* Similarly the cone of nonnegative polynomials on a finite interval\n",
+    "$$\n",
     "\\begin{eqnarray*}\n",
     "\t\\mathbf{K}_{a,b}^n = \\{\\mathbf{x} \\in \\mathbb{R}^{n+1}: f(t) = \\mathbf{x}^T \\mathbf{v}(t) \\ge 0, \\text{ for all } t \\in [a,b]\\}\n",
     "\\end{eqnarray*}\n",
-    "can be characterized by LMI as well. MosekModelling.pdf p48.\n",
+    "$$\n",
+    "can be characterized by LMI as well. \n",
     "    * (Even degree) Let $n = 2m$. Then\n",
+    "    $$\n",
     "    \\begin{eqnarray*}\n",
     "        \\mathbf{K}_{a,b}^n &=& \\{\\mathbf{x} \\in \\mathbb{R}^{n+1}: x_i = \\langle \\mathbf{X}_1, \\mathbf{H}_i^m \\rangle + \\langle \\mathbf{X}_2, (a+b) \\mathbf{H}_{i-1}^{m-1} - ab \\mathbf{H}_i^{m-1} - \\mathbf{H}_{i-2}^{m-1} \\rangle, \\\\\n",
     "        & & \\quad i = 0,\\ldots,n, \\mathbf{X}_1 \\in \\mathbf{S}_+^m, \\mathbf{X}_2 \\in \\mathbb{S}_+^{m-1}\\}.\n",
     "    \\end{eqnarray*}\n",
+    "    $$\n",
     "    * (Odd degree) Let $n = 2m + 1$. Then\n",
+    "    $$\n",
     "    \\begin{eqnarray*}\n",
     "        \\mathbf{K}_{a,b}^n &=& \\{\\mathbf{x} \\in \\mathbb{R}^{n+1}: x_i = \\langle \\mathbf{X}_1, \\mathbf{H}_{i-1}^m - a \\mathbf{H}_i^m \\rangle + \\langle \\mathbf{X}_2, b \\mathbf{H}_{i}^{m} - \\mathbf{H}_{i-1}^{m} \\rangle, \\\\\n",
     "        & & \\quad i = 0,\\ldots,n, \\mathbf{X}_1, \\mathbf{X}_2 \\in \\mathbb{S}_+^m\\}.\n",
     "    \\end{eqnarray*}\n",
+    "    $$\n",
     "\n",
-    "* References: [Nesterov (2000)](https://doi.org/10.1007/978-1-4757-3216-0_17) and Lecture 4 (p157-p159) of [Ben-Tal and Nemirovski (2001)](https://doi.org/10.1137/1.9780898718829).\n",
+    "* References: [Nesterov (2000)](https://doi.org/10.1007/978-1-4757-3216-0_17) and Lecture 4 (p157-p159) of [Ben-Tal and Nemirovski (2001)](https://doi.org/10.1137/1.9780898718829). See also [Mosek Modelling Cookbook](https://docs.mosek.com/MOSEKModelingCookbook-letter.pdf), Sect. 6.2.6.\n",
     "\n",
     "* Example. Polynomial curve fitting. We want to fit a univariate polynomial of degree $n$\n",
+    "$$\n",
     "\\begin{eqnarray*}\n",
     "\tf(t) = x_0 + x_1 t + x_2 t^2 + \\cdots x_n t^n\n",
     "\\end{eqnarray*}\n",
+    "$$\n",
     "to a set of measurements $(t_i, y_i)$, $i=1,\\ldots,m$, such that $f(t_i) \\approx y_i$. Define the Vandermonde matrix\n",
+    "$$\n",
     "\\begin{eqnarray*}\n",
     "\t\\mathbf{A} = \\begin{pmatrix}\n",
     "\t1 & t_1 & t_1^2 & \\cdots & t_1^n \\\\\n",
@@ -641,6 +670,7 @@
     "\t1 & t_m & t_m^2 & \\cdots & t_m^n\n",
     "\t\\end{pmatrix},\n",
     "\\end{eqnarray*}\n",
+    "$$\n",
     "then we wish $\\mathbf{A} \\mathbf{x} \\approx \\mathbf{y}$. Using least squares criterion, we obtain the optimal solution $\\mathbf{x}_{\\text{LS}} = (\\mathbf{A}^T \\mathbf{A})^{-1} \\mathbf{A}^T \\mathbf{y}$. With various constraints, it is possible to find optimal $\\mathbf{x}$ by SDP.\n",
     "    * Nonnegativity. Then we require $\\mathbf{x} \\in \\mathbf{K}_{a,b}^n$.\n",
     "    * Monotonicity. We can ensure monotonicity of $f(t)$ by requiring that $f'(t) \\ge 0$ or $f'(t) \\le 0$. That is $(x_1,2x_2, \\ldots, nx_n) \\in \\mathbf{K}_{a,b}^{n-1}$ or $-(x_1,2x_2, \\ldots, nx_n) \\in \\mathbf{K}_{a,b}^{n-1}$.\n",
@@ -661,29 +691,36 @@
     "## SDP relaxation of binary LP\n",
     "\n",
     "* Consider a binary linear programming problem\n",
+    "$$\n",
     "\\begin{eqnarray*}\n",
     "\t&\\text{minimize}& \\mathbf{c}^T \\mathbf{x} \\\\\n",
     "\t&\\text{subject to}& \\mathbf{A} \\mathbf{x} = \\mathbf{b}, \\quad \\mathbf{x} \\in \\{0,1\\}^n.\n",
     "\\end{eqnarray*}\n",
+    "$$\n",
     "Note\n",
+    "$$\n",
     "\\begin{eqnarray*}\n",
-    "\t& & x_i \\in \\{0,1\\} \n",
-    "\t\\Leftrightarrow x_i^2 = x_i \n",
+    "\t& & x_i \\in \\{0,1\\},~\\forall i\n",
+    "\t\\Leftrightarrow x_i^2 = x_i ,~\\forall i\n",
     "\t\\Leftrightarrow \\mathbf{X} = \\mathbf{x} \\mathbf{x}^T, \\text{diag}(\\mathbf{X}) = \\mathbf{x}.\n",
     "\\end{eqnarray*}\n",
+    "$$\n",
     "By relaxing the rank 1 constraint on $\\mathbf{X}$, we obtain an SDP relaxation\n",
+    "$$\n",
     "\\begin{eqnarray*}\n",
     "\t&\\text{minimize}& \\mathbf{c}^T \\mathbf{x} \\\\\n",
     "\t&\\text{subject to}& \\mathbf{A} \\mathbf{x} = \\mathbf{b}, \\text{diag}(\\mathbf{X}) = \\mathbf{x}, \\mathbf{X} \\succeq \\mathbf{x} \\mathbf{x}^T.\n",
     "\\end{eqnarray*}\n",
+    "$$\n",
     "Note $\\mathbf{X} \\succeq \\mathbf{x} \\mathbf{x}^T$ is equivalent to the LMI \n",
+    "$$\n",
     "\\begin{eqnarray*}\n",
     "\t\\begin{bmatrix}\n",
     "\t1 & \\mathbf{x}^T \\\\ \\mathbf{x} &\\mathbf{X}\n",
     "\t\\end{bmatrix} \\succeq \\mathbf{0}.\n",
     "\\end{eqnarray*}\n",
-    "\n",
-    "This SDP be efficiently solved and provides a **lower bound** to the original problem (why?). If the optimal $\\mathbf{X}$ has rank 1, then it is a solution to the original binary LP.\n",
+    "$$\n",
+    "This SDP can be efficiently solved and provides a **lower bound** to the original problem (why?). If the optimal $\\mathbf{X}$ has rank 1, then it is a solution to the original binary LP.\n",
     "\n",
     "We can tighten the relaxation by adding other constraints that cut away part of the feasible set, without excluding rank 1 solutions. For instance, $0 \\le x_i \\le 1$ and $0 \\le X_{ij} \\le 1$."
    ]
