--- a/lectures/22-newton/newton.ipynb
+++ b/lectures/22-newton/newton.ipynb
@@ -120,7 +120,7 @@
     "* Newton's method was originally developed by, not surprisingly, Isaac Newton, and further refined by [Joseph Raphson](https://en.wikipedia.org/wiki/Joseph_Raphson), to find roots of nonlinear equations\n",
     "$g(x) = 0$:\n",
     "$$\n",
-    "    x^{(t+1)} = x^{(t)} - \\frac{g(x^{(t)}}{g'(x^{(t)})}.\n",
+    "    x^{(t+1)} = x^{(t)} - \\frac{g(x^{(t)})}{g'(x^{(t)})}.\n",
     "$$\n",
     "\n",
     "* In optimization, we may solve the nonlinear equation $\\nabla f(\\mathbf{x}) = 0$ by Newton-Raphson, i.e., setting $g(\\mathbf{x})=\\nabla f(\\mathbf{x})$.\n",
@@ -551,15 +551,15 @@
    "lastKernelId": null
   },
   "kernelspec": {
-   "display_name": "Julia 1.4.0",
+   "display_name": "Julia 1.6.2",
    "language": "julia",
-   "name": "julia-1.4"
+   "name": "julia-1.6"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.4.0"
+   "version": "1.6.2"
   },
   "toc": {
    "colors": {
