--- a/lectures/22-newton/newton.ipynb
+++ b/lectures/22-newton/newton.ipynb
@@ -16,14 +16,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Julia Version 1.4.0\n",
-      "Commit b8e9a9ecc6 (2020-03-21 16:36 UTC)\n",
+      "Julia Version 1.6.2\n",
+      "Commit 1b93d53fc4 (2021-07-14 15:36 UTC)\n",
       "Platform Info:\n",
-      "  OS: macOS (x86_64-apple-darwin18.6.0)\n",
+      "  OS: macOS (x86_64-apple-darwin18.7.0)\n",
       "  CPU: Intel(R) Core(TM) i5-8279U CPU @ 2.40GHz\n",
       "  WORD_SIZE: 64\n",
       "  LIBM: libopenlibm\n",
-      "  LLVM: libLLVM-8.0.1 (ORCJIT, skylake)\n"
+      "  LLVM: libLLVM-11.0.1 (ORCJIT, skylake)\n"
      ]
     }
    ],
@@ -40,51 +40,56 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m Activating\u001b[22m\u001b[39m environment at `~/Dropbox/class/M1399.000200/2020/Project.toml`\n"
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m environment at `~/Dropbox/class/M1399.000200/2021/M1399_000200-2021fall/Project.toml`\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1mStatus\u001b[22m\u001b[39m `~/Dropbox/class/M1399.000200/2020/Project.toml`\n",
-      " \u001b[90m [7d9fca2a]\u001b[39m\u001b[37m Arpack v0.4.0\u001b[39m\n",
-      " \u001b[90m [6e4b80f9]\u001b[39m\u001b[37m BenchmarkTools v0.5.0\u001b[39m\n",
-      " \u001b[90m [1e616198]\u001b[39m\u001b[37m COSMO v0.7.7\u001b[39m\n",
-      " \u001b[90m [f65535da]\u001b[39m\u001b[37m Convex v0.13.7\u001b[39m\n",
-      " \u001b[90m [a93c6f00]\u001b[39m\u001b[37m DataFrames v0.21.8\u001b[39m\n",
-      " \u001b[90m [31c24e10]\u001b[39m\u001b[37m Distributions v0.23.12\u001b[39m\n",
-      " \u001b[90m [e2685f51]\u001b[39m\u001b[37m ECOS v0.12.1\u001b[39m\n",
-      " \u001b[90m [f6369f11]\u001b[39m\u001b[37m ForwardDiff v0.10.12\u001b[39m\n",
-      " \u001b[90m [c91e804a]\u001b[39m\u001b[37m Gadfly v1.3.1\u001b[39m\n",
-      " \u001b[90m [bd48cda9]\u001b[39m\u001b[37m GraphRecipes v0.5.4\u001b[39m\n",
-      " \u001b[90m [2e9cd046]\u001b[39m\u001b[37m Gurobi v0.9.2\u001b[39m\n",
-      " \u001b[90m [82e4d734]\u001b[39m\u001b[37m ImageIO v0.3.1\u001b[39m\n",
-      " \u001b[90m [6218d12a]\u001b[39m\u001b[37m ImageMagick v1.1.6\u001b[39m\n",
-      " \u001b[90m [916415d5]\u001b[39m\u001b[37m Images v0.23.1\u001b[39m\n",
-      " \u001b[90m [b6b21f68]\u001b[39m\u001b[37m Ipopt v0.6.3\u001b[39m\n",
-      " \u001b[90m [42fd0dbc]\u001b[39m\u001b[37m IterativeSolvers v0.8.4\u001b[39m\n",
-      " \u001b[90m [4076af6c]\u001b[39m\u001b[37m JuMP v0.21.4\u001b[39m\n",
-      " \u001b[90m [b51810bb]\u001b[39m\u001b[37m MatrixDepot v0.9.0-DEV #master (https://github.com/JuliaMatrices/MatrixDepot.jl.git)\u001b[39m\n",
-      " \u001b[90m [6405355b]\u001b[39m\u001b[37m Mosek v1.1.3\u001b[39m\n",
-      " \u001b[90m [1ec41992]\u001b[39m\u001b[37m MosekTools v0.9.4\u001b[39m\n",
-      " \u001b[90m [76087f3c]\u001b[39m\u001b[37m NLopt v0.6.1\u001b[39m\n",
-      " \u001b[90m [47be7bcc]\u001b[39m\u001b[37m ORCA v0.5.0\u001b[39m\n",
-      " \u001b[90m [a03496cd]\u001b[39m\u001b[37m PlotlyBase v0.4.1\u001b[39m\n",
-      " \u001b[90m [f0f68f2c]\u001b[39m\u001b[37m PlotlyJS v0.14.0\u001b[39m\n",
-      " \u001b[90m [91a5bcdd]\u001b[39m\u001b[37m Plots v1.6.12\u001b[39m\n",
-      " \u001b[90m [438e738f]\u001b[39m\u001b[37m PyCall v1.92.1\u001b[39m\n",
-      " \u001b[90m [d330b81b]\u001b[39m\u001b[37m PyPlot v2.9.0\u001b[39m\n",
-      " \u001b[90m [dca85d43]\u001b[39m\u001b[37m QuartzImageIO v0.7.3\u001b[39m\n",
-      " \u001b[90m [6f49c342]\u001b[39m\u001b[37m RCall v0.13.9\u001b[39m\n",
-      " \u001b[90m [ce6b1742]\u001b[39m\u001b[37m RDatasets v0.6.10\u001b[39m\n",
-      " \u001b[90m [c946c3f1]\u001b[39m\u001b[37m SCS v0.7.1\u001b[39m\n",
-      " \u001b[90m [276daf66]\u001b[39m\u001b[37m SpecialFunctions v0.10.3\u001b[39m\n",
-      " \u001b[90m [2913bbd2]\u001b[39m\u001b[37m StatsBase v0.33.2\u001b[39m\n",
-      " \u001b[90m [b8865327]\u001b[39m\u001b[37m UnicodePlots v1.3.0\u001b[39m\n",
-      " \u001b[90m [8f399da3]\u001b[39m\u001b[37m Libdl \u001b[39m\n",
-      " \u001b[90m [2f01184e]\u001b[39m\u001b[37m SparseArrays \u001b[39m\n",
-      " \u001b[90m [10745b16]\u001b[39m\u001b[37m Statistics \u001b[39m\n"
+      "\u001b[32m\u001b[1m      Status\u001b[22m\u001b[39m `~/Dropbox/class/M1399.000200/2021/M1399_000200-2021fall/Project.toml`\n",
+      " \u001b[90m [7d9fca2a] \u001b[39mArpack v0.4.0\n",
+      " \u001b[90m [6e4b80f9] \u001b[39mBenchmarkTools v1.2.0\n",
+      " \u001b[90m [1e616198] \u001b[39mCOSMO v0.8.1\n",
+      " \u001b[90m [f65535da] \u001b[39mConvex v0.14.16\n",
+      " \u001b[90m [a93c6f00] \u001b[39mDataFrames v1.2.2\n",
+      " \u001b[90m [31a5f54b] \u001b[39mDebugger v0.6.8\n",
+      " \u001b[90m [31c24e10] \u001b[39mDistributions v0.24.18\n",
+      " \u001b[90m [e2685f51] \u001b[39mECOS v0.12.3\n",
+      " \u001b[90m [f6369f11] \u001b[39mForwardDiff v0.10.21\n",
+      " \u001b[90m [28b8d3ca] \u001b[39mGR v0.61.0\n",
+      " \u001b[90m [c91e804a] \u001b[39mGadfly v1.3.3\n",
+      " \u001b[90m [bd48cda9] \u001b[39mGraphRecipes v0.5.7\n",
+      " \u001b[90m [2e9cd046] \u001b[39mGurobi v0.9.14\n",
+      " \u001b[90m [f67ccb44] \u001b[39mHDF5 v0.14.3\n",
+      " \u001b[90m [82e4d734] \u001b[39mImageIO v0.5.8\n",
+      " \u001b[90m [6218d12a] \u001b[39mImageMagick v1.2.1\n",
+      " \u001b[90m [916415d5] \u001b[39mImages v0.24.1\n",
+      " \u001b[90m [b6b21f68] \u001b[39mIpopt v0.7.0\n",
+      " \u001b[90m [42fd0dbc] \u001b[39mIterativeSolvers v0.9.1\n",
+      " \u001b[90m [4076af6c] \u001b[39mJuMP v0.21.10\n",
+      " \u001b[90m [b51810bb] \u001b[39mMatrixDepot v1.0.4\n",
+      " \u001b[90m [6405355b] \u001b[39mMosek v1.2.1\n",
+      " \u001b[90m [1ec41992] \u001b[39mMosekTools v0.9.4\n",
+      " \u001b[90m [76087f3c] \u001b[39mNLopt v0.6.3\n",
+      " \u001b[90m [47be7bcc] \u001b[39mORCA v0.5.0\n",
+      " \u001b[90m [a03496cd] \u001b[39mPlotlyBase v0.4.3\n",
+      " \u001b[90m [f0f68f2c] \u001b[39mPlotlyJS v0.15.0\n",
+      " \u001b[90m [91a5bcdd] \u001b[39mPlots v1.22.6\n",
+      " \u001b[90m [438e738f] \u001b[39mPyCall v1.92.3\n",
+      " \u001b[90m [d330b81b] \u001b[39mPyPlot v2.10.0\n",
+      " \u001b[90m [dca85d43] \u001b[39mQuartzImageIO v0.7.3\n",
+      " \u001b[90m [6f49c342] \u001b[39mRCall v0.13.12\n",
+      " \u001b[90m [ce6b1742] \u001b[39mRDatasets v0.7.5\n",
+      " \u001b[90m [c946c3f1] \u001b[39mSCS v0.7.1\n",
+      " \u001b[90m [276daf66] \u001b[39mSpecialFunctions v1.7.0\n",
+      " \u001b[90m [2913bbd2] \u001b[39mStatsBase v0.33.12\n",
+      " \u001b[90m [f3b207a7] \u001b[39mStatsPlots v0.14.28\n",
+      " \u001b[90m [b8865327] \u001b[39mUnicodePlots v2.4.6\n",
+      " \u001b[90m [0f1e0344] \u001b[39mWebIO v0.8.16\n",
+      " \u001b[90m [8f399da3] \u001b[39mLibdl\n",
+      " \u001b[90m [2f01184e] \u001b[39mSparseArrays\n",
+      " \u001b[90m [10745b16] \u001b[39mStatistics\n"
      ]
     }
    ],
@@ -159,25 +164,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "┌ Info: Saved animation to \n",
-      "│   fn = /Users/jhwon/Dropbox/class/M1399.000200/2020/lectures/22-newton/newton_sine_1.gif\n",
-      "└ @ Plots /Users/jhwon/.julia/packages/Plots/uCh2y/src/animation.jl:104\n",
-      "┌ Info: Saved animation to \n",
-      "│   fn = /Users/jhwon/Dropbox/class/M1399.000200/2020/lectures/22-newton/newton_sine_2.gif\n",
-      "└ @ Plots /Users/jhwon/.julia/packages/Plots/uCh2y/src/animation.jl:104\n",
-      "┌ Info: Saved animation to \n",
-      "│   fn = /Users/jhwon/Dropbox/class/M1399.000200/2020/lectures/22-newton/newton_sine_3.gif\n",
-      "└ @ Plots /Users/jhwon/.julia/packages/Plots/uCh2y/src/animation.jl:104\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "using Plots; gr()\n",
     "using ForwardDiff  # for symbolic differentiation\n",
